Fix map size overflow issue

--- a/src/components/RideTo/SupplierPage/SupplierExtraInfo/SupplierExtraInfo.scss
+++ b/src/components/RideTo/SupplierPage/SupplierExtraInfo/SupplierExtraInfo.scss
@@ -2,6 +2,7 @@
   padding: 26px 40px;
   border: 1px solid rgba(20, 20, 20, 0.1);
   margin-bottom: 32px;
+  background: white;
 
   p {
     font-size: 14px;
