--- a/src/components/RideTo/SupplierPage/SupplierInfo/SupplierInfo.scss
+++ b/src/components/RideTo/SupplierPage/SupplierInfo/SupplierInfo.scss
@@ -117,6 +117,11 @@
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   padding-top: 40px;
   padding-bottom: 40px;
+
+  @media (min-width: 1200px) {
+    max-width: 540px;
+    overflow: hidden;
+  }
 }
 
 .facilityGroup {
